k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deployment
  labels:
    app: api

spec:
  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
      - name: multi-streamer-api
        image: praveenraj9495/multi-streamer-api:v0.2.0
        ports:
        - containerPort: 5000
        - containerPort: 4005
