k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: mysql-deployment
  labels:
    app: mysql-deployment

spec:
  selector:
    matchLabels:
      app: mysql

  template:
    metadata:
      labels:
        app: mysql

    spec:
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-persistent-volume-claim 

      containers:
      - name: mysql
        image: mysql
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
          subPath: mysql
