k8s/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment
  labels:
    app: redis

spec:
  selector:
    matchLabels:
      app: redis
  
  template:
    metadata:
      labels:
        app: redis

    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
