k8s/mysql-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-cluster-ip
  labels:
    service: mysql-cluster-ip

spec:
  type: ClusterIP
  ports:
  - port: 3306
  selector:
    app: mysql
