k8s/rtmp-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtmp-cluster-ip
  labels:
    service: rtmp-cluster-ip

spec:
  type: ClusterIP
  ports:
  - name: rtmp
    port: 1935
    targetPort: 1935
  - name: preview-nginx-server
    port: 80
    targetPort: 80
  selector:
    app: rtmp
