k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend-cluster-ip 
          servicePort: 80
      - path: /v1/api
        backend:
          serviceName: api-cluster-ip
          servicePort: 5000
      - path: /ws
        backend:
          serviceName: api-cluster-ip
          servicePort: 5000
      - path: /hls-preview
        backend:
          serviceName: rtmp-cluster-ip
          servicePort: 80

---

apiVersion: v1
kind: Service

metadata:
  name: rtmp-ingress

spec:
  type: LoadBalancer
  selector:
    app: rtmp
  ports:
  - port: 1935
    targetPort: 1935
